allow user to create a new post

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,7 @@
 <nav>
   {{#link-to 'index'}}<h1>BlogNamePlaceHolder</h1>{{/link-to}}
   <div class="nav-links">
+    {{#link-to 'post'}}<span>Add a Post</span>{{/link-to}}
     {{#link-to 'about'}}<span>About Us</span>{{/link-to}}
     {{#link-to 'contact'}}<span>Contact</span>{{/link-to}}
   </div>
