--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,7 +1,34 @@
+body {
+  background-color: #f5f5f5;
+}
+
 nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   height: 10rem;
   border-bottom: 1px solid black;
+  a {
+    text-decoration: none;
+  }
+  #nav-upper {
+    display: flex;
+    justify-content: flex-end;
+    background-color: #595959;
+    a {
+      color: white;
+    }
+    span {
+      font-size: 1.2rem;
+      margin: 0 1rem;
+    }
+  }
+  #nav-lower {
+    background-color: white;
+    h1 {
+      font-size: 3rem;
+      margin-left: 2rem;
+      font-family: 'Righteous', cursive;
+    }
+    a {
+      color: #004466;
+    }
+  }
 }
