--- a/app/templates/components/post-tile.hbs
+++ b/app/templates/components/post-tile.hbs
@@ -5,4 +5,5 @@
 {{else}}
   <button {{action 'imageShow'}}>Show image</button>
 {{/if}}
+{{update-post post=post update="update"}}
 <button {{action 'delete' post}}>Delete</button>
