refactor post details

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
 <nav>
   <div id="nav-upper">
     <div class="nav-links">
-      {{#link-to 'post'}}<span>Add a Post</span>{{/link-to}}
+      {{#link-to 'new-post'}}<span>Add a Post</span>{{/link-to}}
       {{#link-to 'about'}}<span>About Us</span>{{/link-to}}
       {{#link-to 'contact'}}<span>Contact</span>{{/link-to}}
     </div>
