--- a/app/templates/components/post-tile.hbs
+++ b/app/templates/components/post-tile.hbs
@@ -1,9 +1,7 @@
-<h2>{{post.title}} by {{post.user}}</h2>
+{{#link-to 'post' post.id}}<h2>{{post.title}} by {{post.user}}</h2>{{/link-to}}
 <h6>{{post.date}}</h6>
 {{#if isImageShowing }}
   <p><img src={{post.image}} alt={{post.title}} {{action 'imageHide'}}></p>
 {{else}}
   <button {{action 'imageShow'}}>Show image</button>
 {{/if}}
-{{update-post post=post update="update"}}
-<button {{action 'delete' post}}>Delete</button>
